--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroui/link": "^2.2.14",
     "@heroui/modal": "^2.2.14",
     "@heroui/navbar": "2.2.15",
+    "@heroui/skeleton": "^2.2.10",
     "@heroui/snippet": "2.2.18",
     "@heroui/switch": "2.2.15",
     "@heroui/system": "2.4.13",
@@ -32,7 +33,7 @@
     "@tanstack/react-query": "^5.74.3",
     "axios": "^1.8.4",
     "clsx": "2.1.1",
-    "framer-motion": "11.15.0",
+    "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
